[DOC] Add intro overview diagram

--- a/docs/content/introduction.tex
+++ b/docs/content/introduction.tex
@@ -50,6 +50,8 @@ In order to be able to measure the effects of the implemented enhancements, a te
 
 Lastly, the measurement results should be presented and evaluated, summarizing the gained experiences.
 
+The visualized overview of the thesis' objectives can be seen in Figure \ref{fig:overview}.
+
 
 %\begin{itemize}
 %	\item introduce Kubernetes a widely used system for automating deployment, scaling, and management of containerized applications in the cloud
@@ -60,11 +62,12 @@ Lastly, the measurement results should be presented and evaluated, summarizing t
 %	\item present and evaluate the measurement results and summarize the gained experiences
 %\end{itemize}
 
-TODO
-
-overview diagram
-
-TODO
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=140mm, keepaspectratio]{figures/overview-diagram.png}
+	\caption{Overview diagram}
+	\label{fig:overview}
+\end{figure}
 
 %----------------------------------------------------------------------------
 \section{Thesis structure}
