--- a/docs/content/test-framework.tex
+++ b/docs/content/test-framework.tex
@@ -39,7 +39,7 @@ Consistency is essential when testing. In order to get meaningful results that c
 
 The first thing to specify when designing a test framework is the test objective. This highly affects the way the framework should be planned and created.
 
-The goal of the framework is to measure the dependability metrics of the sample application to reveal weak spots and to discover opportunities to improve the dependability of the application. The results of the measurements can be used later as reference values when introducing various kinds of enhancements to the system to make the metrics better. The enhancements are described in Chapter \ref{enhancements}.
+The goal of the framework is to measure the dependability metrics of the sample application to reveal weak spots and to discover opportunities to improve the dependability of the application. The results of the measurements can be later used as reference values when introducing various kinds of enhancements to the system to make the metrics better. The enhancements are described in Chapter \ref{enhancements}.
 
 %----------------------------------------------------------------------------
 \subsection{Requirements} \label{test-design-req}
@@ -47,7 +47,7 @@ The goal of the framework is to measure the dependability metrics of the sample 
 
 The design of the test framework was driven by several requirements to create an architecture that facilitates achieving the test objective defined in the previous section.
 
-\paragraph{Configurable} In order to support various kinds of test scenarios, the framework should be highly configurable. This characteristic also makes the testing system more reusable and generic, so it is not closely tailored to the sample application described in this project.
+\paragraph{Configurable} In order to support various kinds of test scenarios, the framework should be highly configurable. This characteristic also makes the testing system more reusable and generic, so it is not closely coupled to the sample application described in this project.
 
 \paragraph{Reproducible} The framework should function in a fairly deterministic way. This means that any two test executions with the same configuration should produce approximately the same results. As the applications that the framework is designed to evaluate are Kubernetes based, distributed systems, requiring complete deterministic behavior of the framework is not realistic. There are several things that can introduce a slight level of randomness to the application. For example the state of the network between the components or the way the fault injection logic inserts anomalies into the system (further details in section \ref{test-design-fault-injector}).
 
@@ -81,7 +81,7 @@ Considering the test objective and the requirements described in the previous se
 	\label{fig:test_framework_workflow}
 \end{figure}
 
-As per this design, the framework should first prepare the environment for testing. This consists of setting up the Kubernetes infrastructure that the application will run on and starting the deployed application in this environment. After the application is running, in order to trigger to trigger task executions, a subsystem generates and sends load to the application. To better understand how the system under test behaves, different kinds of faults and anomalies are introduced to the system while the executions and possibly the load generation are in progress. The framework constantly collects the exposed metrics from the application and the infrastructure to gain insights about how the system manages to handle the implanted anomalies. After the load generation and the task executions are done, the metrics get stored and evaluated.
+As per this design, the framework should first prepare the environment for testing. This consists of setting up the Kubernetes infrastructure that the application will run on and starting the deployed application in this environment. After the application is running, in order to trigger task executions, a subsystem generates and sends load to the application. To better understand how the system under test behaves, different kinds of faults and anomalies are introduced to the system while the executions and possibly the load generation are in progress. The framework constantly collects the exposed metrics from the application and the infrastructure to gain insights about how the system manages to handle the implanted anomalies. After the load generation and the task executions are done, the metrics get stored and evaluated.
 
 %----------------------------------------------------------------------------
 \subsection{Architecture}
@@ -115,7 +115,7 @@ The framework consists of three main components: the load generator, the fault i
 
 The responsibility of the load generator component is to simulate real world workload on the sample application. This way the framework can better assess the actual dependability characteristics of the system.
 
-As the sample application (more precisely the backend) accepts user inputs in the form of HTTP requests, the load generator component should be able to produce correctly built up HTTP requests and send them to the application. This will trigger task executions and multiple worker instance deployments in case the requests are sent more frequently than a single worker could execute them one by one without leaving any tasks waiting in the message queue.
+As the sample application (more precisely the backend) accepts user inputs in the form of HTTP requests, the load generator component should be able to produce correctly built up HTTP requests and send them to the application. This will trigger task executions and multiple worker instance deployments in case the requests are sent more frequently than a single worker could process them one by one without leaving any tasks waiting in the message queue.
 
 %----------------------------------------------------------------------------
 \subsubsection{Parameters}
@@ -311,7 +311,7 @@ The number of Measurements to execute during a Measurement Sequence is set by an
 
 % the role of scheduled chaos experiment
 
-\paragraph{Periodic Fault Injection} During a single Measurement Kubedepend injects failure anomalies periodically. This supports testing the robustness of the system under test and that how well the application can recover from failures.
+\paragraph{Periodic Fault Injection} During a single Measurement Kubedepend injects failure anomalies periodically. This supports testing the robustness of the system under test and its ability to recover from failures.
 
 \paragraph{Stable System State} Executing Measurement Sequences instead of a single Measurement introduces another complication to the test framework. It has to ensured that the effects of a previous Measurement does not have an impact on consequent Measurements. For this purpose, Kubedepend uses the notion of Stable System State which represents the state of the application under test, where all the components are up and running, there are no task executions in progress and there are not any messages waiting in the message queue. A Measurement can only be started if the application is in Stable System State.
 
@@ -334,7 +334,7 @@ Kubedepend saves the results of the measurements in a CSV file, where each row d
 	\item \texttt{submitted\_jobs} - The number of jobs submitted by the client during a given Measurement.
 	\item \texttt{finished\_jobs} - The number of successfully finished jobs during a given Measurement.
 	\item \texttt{fault\_profile} - The fault profile used for fault injection during the Measurement Sequence.
-	\item \texttt{cluster\_type} - The type of the Kubernetes cluster the application runs on. Can be set with the \texttt{cluster-type} Kubedend command line parameter. Possible values at the moment are \texttt{eks} or \texttt{minikube}.
+	\item \texttt{cluster\_type} - The type of the Kubernetes cluster the application runs on. Can be set with the \texttt{cluster-type} Kubedepend command line parameter. Possible values at the moment are \texttt{eks} or \texttt{minikube}.
 	\item \texttt{measurement\_count} - The number of Measurements executed in the given Measurement Sequence.
 	\item \texttt{load\_duration} - The duration of the load generation in seconds.
 	\item \texttt{locust\_user\_count} - The number of simulated users (further details in Section \ref{test-impl-load-generation}).
@@ -362,7 +362,7 @@ Kubedepend uses Locust \cite{Locust} to generate load for the sample application
 \subsubsection{User Model}
 %----------------------------------------------------------------------------
 
-In order to generate load with Locust, a user model is required, that represents the behavior of one user. This model can specify the actions Locust will make against the backend \eg what request to send, how much time to wait between submitting task inputs.
+In order to generate load with Locust, a user model is required that represents the behavior of one user. This model can specify the actions Locust will make against the backend \eg what request to send, how much time to wait between submitting task inputs.
 
 \vspace{0.5cm}
 \begin{minipage}{\linewidth}
@@ -393,7 +393,7 @@ The user model is a subclass of \texttt{HttpUser} which is the most commonly use
 
 The \texttt{User} class has one custom method (\texttt{submit\_job\_task()}) that defines a Locust task. When the load generation is started, an instance of the \texttt{User} class will be created for each simulated user and while these run, they execute their Locust tasks which can be specified \eg by applying the \texttt{@task} decorator to member methods. The \texttt{submit\_job\_task()} creates a JSON object specifying the input for a new execution, then sends the request to the task input endpoint of the backend (see Section \ref{impl-backend-interfaces}).
 
-The \texttt{wait\_time} method makes it possible to introduce delays after each Locust task execution. In the above example, it sets how many time to wait between sending inputs for new executions to the backend. The built-in \texttt{constant\_pacing} method is used for an adaptive time that ensures the requests are sent once every 5 seconds.
+The \texttt{wait\_time} member variable makes it possible to introduce delays after each Locust task execution. In the above example, it sets how many time to wait between sending inputs for new executions to the backend. The built-in \texttt{constant\_pacing} method is used for an adaptive time that ensures the requests are sent once every 5 seconds.
 
 The \texttt{host} attribute stores the base URL of the backend service.
 
@@ -423,7 +423,7 @@ Fault injection is implemented by using Chaos Mesh (see details in Section \ref{
 
 In order to be able to inject failure anomalies, the core components of Chaos Mesh (Chaos Controller Manager, Chaos Daemon, Chaos Dashboard) must be deployed to the Kubernetes cluster prior to applying chaos experiments. It can be achieved using the official helm chart of Chaos Mesh \cite{ChaosMeshChart}. Kubedepend assumes that Chaos Mesh is already deployed on the Kubernetes cluster.
 
-Kubedepend supports easy management of the chaos objects that represent failure anomalies. To avoid the need of individually creating, applying and deleting each chaos experiment Custom Resource Definition, these objects are collected into a custom helm chart called \texttt{kubedepend-chaos}. This also facilitates the easy configuration of chaos experiments through the use of helm templates and a values file.
+Kubedepend supports easy management of the chaos objects that represent failure anomalies. To avoid the need of individually creating, applying and deleting each chaos experiment Custom Resource Definition, these objects are collected into a custom helm chart called \texttt{kubedepend-chaos}. This also facilitates the simple configuration of chaos experiments through the use of helm templates and a values file.
 
 %----------------------------------------------------------------------------
 \subsubsection{Fault Profiles} \label{test-impl-fault-profiles}
@@ -442,9 +442,9 @@ The framework allows defining multiple chaos experiments inside one fault profil
 
 It is also possible to set a strength level for each chaos experiment inside a fault profile. For example, when setting up a profile that uses a network delay chaos, the different strength levels control how much delay should be applied for each network packet. The exact values used for specifying the strength levels are arbitrary but can be modified easily if needed.
 
-Currently the following fault profiles are defined, which only affect workloads only in the namespace of the application:
+Currently the following fault profiles are defined, which affect workloads only in the namespace of the application:
 
-\paragraph{IO} The IO fault profile introduces delays to disk read and write operations for a specific period of time. The current implementation limits the profile to only affect the database because IO operations are practically only critical for the database as the other other components in the system only keep their data in memory.
+\paragraph{IO} The IO fault profile introduces delays to disk read and write operations for a specific period of time. The current implementation limits the profile to only affect the database because IO operations are practically only critical for the database as the other other components in the system keep their data only in memory.
 
 \paragraph{Network Delay} The Network Delay fault profile causes latency in the network connections of the targeted Pods for a specific period of time.
 
@@ -528,9 +528,9 @@ The monitoring system consists of several third-party tools in order to provide 
 
 \paragraph{Prometheus} Prometheus is used to collect and store the metrics from the application components and the underlying Kubernetes infrastructure they run on.
 
-\paragraph{Metrics Server} Metrics Server is a cluster-wide source of container metrics for Kubernetes built-in autoscaling pipelines and is needed to be able to user Prometheus Adapter.
+\paragraph{Metrics Server} Metrics Server is a cluster-wide source of container metrics for Kubernetes built-in autoscaling pipelines and is needed to be able to use Prometheus Adapter.
 
-\paragraph{Prometheus Adapter} The Prometheus Adapter enables Kubernetes to scale workloads (\eg Deployments) based upon custom metrics that are pulled from external metric provider like Prometheus.
+\paragraph{Prometheus Adapter} The Prometheus Adapter enables Kubernetes to scale workloads (\eg Deployments) based upon custom metrics that are pulled from external metric providers, like Prometheus.
 
 \paragraph{Prometheus Blackbox Exporter} Prometheus Blackbox Exporter allows blackbox probing of endpoints over various protocols, for instance HTTP.
 
@@ -595,7 +595,7 @@ With the default settings Prometheus already collects vast amounts of metrics fr
 	  target_label: __address__\end{lstlisting}
 \end{minipage}
 
-The \texttt{kubernetes\_sd\_configs} object sets up Kubernetes Service Discovery which allows retrieving up to date scrape targets from the Kubernetes REST API. Here, the \texttt{pod} role is used, that specifies that the scrape job only looks for Pod objects. The targets are further filtered to be in the \texttt{kubedepend} namespace and have the label \texttt{app=kubedepend-worker-app}.
+The \texttt{kubernetes\_sd\_configs} object sets up Kubernetes Service Discovery which allows retrieving up to date scrape targets from the Kubernetes REST API. Here, the \texttt{pod} role is used that specifies that the scrape job only looks for Pod objects. The targets are further filtered to be in the \texttt{kubedepend} namespace and have the label \texttt{app=kubedepend-worker-app}.
 
 Relabeling is a powerful tool to dynamically configure the behavior of scraping. In the above three rules, Prometheus only keeps those targets, which posses the \texttt{prometheus.io/scrape: "true"} annotation. Then the metrics path -- which tells Prometheus on which path to access the exposed metrics -- is overwritten with value of \texttt{prometheus.io/path} annotation. Lastly, the address of the Pod is extended with the port number specified by the value of \texttt{prometheus.io/port} annotation.
 
@@ -616,7 +616,7 @@ Throughout the project, several metrics are used that are not available as built
 
 \emph{Note:} \texttt{<range\_length>} is a variable used by Kubedepend to dynamically set the range of metric samples back from the current time instant to the beginning of the measurement. For example, it can hold the value \texttt{600s}.
 
-\emph{Note:} Prometheus scrapes its targets every 15 seconds by default. That means that the \texttt{probe\ success} metrics produces a value of 1 every 15 seconds. So in order to calculate the total time in seconds when the probe returned successfully, a multiplier of \texttt{15} is needed. It is important to notice that the scrape interval of Prometheus determines the granularity of the metrics, for example it cannot detect if a service is unavailable between two scrapes if the service is up and running at the moment of scraping.
+\emph{Note:} Prometheus scrapes its targets every 15 seconds by default. That means that the \texttt{probe\ success} metrics produces a value of 1 every 15 seconds. So in order to calculate the total time in seconds when a given endpoint was up, a multiplier of \texttt{15} is needed. It is important to notice that the scrape interval of Prometheus determines the granularity of the metrics, for example it cannot detect if a service is unavailable between two scrapes if the service is up and running at the moment of scraping.
  
  \paragraph{Mean Up Time} To calculate Mean Up Time, the total length of uptime is divided by the number of time intervals when the system was up and running. The count of these intervals can be determined by querying the system state at the beginning of the measurement (\texttt{probe\_success\ offset\ <range\_length>}) and by getting how many times the state changed during the measurement (\texttt{change()} PromQL function).
  
@@ -746,7 +746,7 @@ This section describes the build stages of the Jenkins pipeline that runs the te
 
 \paragraph{Check Infrastructure (\texttt{INFR - check})} In this stage, Jenkins checks if the Kubernetes cluster is ready in AWS EKS. If it does not exist, the next stage creates it.
 
-\paragraph{Create Infrastructure (\texttt{INFR - create)}} This stage created the AWS EKS cluster with the help of a CloudFormation template that defines the infrastructure of the system. The template can be found at \texttt{utils/infrastructure.yaml} in the thesis repository \cite{ThesisRepo}.
+\paragraph{Create Infrastructure (\texttt{INFR - create)}} This stage creates the AWS EKS cluster with the help of a CloudFormation template that defines the infrastructure of the system. The template can be found at \texttt{utils/infrastructure.yaml} in the thesis repository \cite{ThesisRepo}.
 
 \paragraph{Configure kubectl (\texttt{INFR - config kubectl})} In order to be able communicate with the Kubernetes cluster, the \texttt{kubectl} client has to be configured. This is carried out by this stage.
 
@@ -796,7 +796,7 @@ All the command line configuration options of Kubedepend are exposed in the Jenk
 \subsection{Motivation}
 %----------------------------------------------------------------------------
 
-The goals of this thesis work included the investigation of possible alternatives to improve the dependability of the Kubernetes based sample application and to implement some of these potential enhancements. In order to be able to improve the metrics, initial measurements are needed to assess the dependability of the original system without applying any enhancements. The results of these measurements can serve as baseline values for comparing the dependability of a changed system to the original one. Furthermore, the results of the initial measurements can help determine which parts of the system should be and can be improved -- this information makes designing the different enhancements easier.
+The goals of this thesis work included the investigation of possible alternatives to improve the dependability of the Kubernetes-based sample application and to implement some of these potential enhancements. In order to be able to improve the metrics, initial measurements are needed to assess the dependability of the original system without applying any enhancements. The results of these measurements can serve as baseline values for comparing the dependability of a changed system to the original one. Furthermore, the results of the initial measurements can help determine which parts of the system should be and can be improved -- this information makes designing the different enhancements easier.
 
 %----------------------------------------------------------------------------
 \subsection{Constant environment}
@@ -806,11 +806,11 @@ Measuring the baseline characteristics of the original application requires that
 
 From the beginning of the project, the test framework is built up with reproducibility in mind. The pipeline described in Section \ref{cicd} supports the usage of the exact same configurations and subsystems on each measurement. 
 
-The core infrastructure layer underlying the application is constructed using a CloudFormation (see Section \ref{cloudformation}) template that ensures that the Kubernetes infrastructure is the same each time. Despite the fact that the cluster runs in the AWS public cloud which serves an immense amount of users, the applications can run in a well controlled environment. The cluster consists of virtual machines that have same operating systems and resources (\eg CPU and memory). The virtual machines run in a separated network using the Virtual Private Cloud (VPC) technology in AWS, so there is no unsolicited network traffic between the nodes in the cluster.
+The core infrastructure layer underlying the application is constructed using a CloudFormation (see Section \ref{cloudformation}) template that ensures that the Kubernetes infrastructure is the same each time. Despite the fact that the cluster runs in the AWS public cloud which serves an immense amount of users, the applications can run in a well controlled environment. The cluster consists of virtual machines that have the same operating systems and resources (\eg CPU and memory). The virtual machines run in a separated network using the Virtual Private Cloud (VPC) technology in AWS, so there is no unsolicited network traffic between the nodes in the cluster.
 
 The application components are packaged and run using containerization technologies with consistent configurations that provide reproducible environment for the software units. During deployment, all the tools and the application components are installed on the cluster with the same parameters by Helm (introduced in Section \ref{helm}) -- another point in favor of reproducibility.
 
-Using the services of a public cloud provider has an important consequence that must be considered before conducting the measurements. The virtual machines that form the Kubernetes cluster run on physical machines that host the workloads of other users fo the cloud provider. This means in theory that the activity of different tenants can affect each other resulting in varying performance of the same system. Isolating the workloads of different users falls under the responsibilities of the provider as the users do not have access to the physical, hardware layer of the infrastructure. The efficiency the isolation depends on the Service Level Agreements taken on by the provider. One could argue, that the transient effects of other tenants can be considered as constant "white noise", because it is always present in the environment both during the development of system while the measurements are executed and both during production periods. This would suggest to ignore the presence or other tenant workloads as its effect is constant in average. However, complete ignorance is not a good solution. In order to mitigate these anomalies, the test framework executes measurement multiple times with the same configuration and draws the final conclusion from aggregated results. In addition, all the components of the application and the framework tooling have defined resource requests \cite{KubernetesResourceManagement} in the Kubernetes configurations ensuring that each pod possesses the necessary resources to function correctly at all times.
+Using the services of a public cloud provider has an important consequence that must be considered before conducting the measurements. The virtual machines that form the Kubernetes cluster run on physical machines that host the workloads of other users of the cloud provider. This means in theory that the activity of different tenants can affect each other resulting in varying performance of the same system. Isolating the workloads of different users falls under the responsibilities of the provider as the users do not have access to the physical, hardware layer of the infrastructure. The efficiency the isolation depends on the Service Level Agreements taken on by the provider. One could argue, that the transient effects of other tenants can be considered as constant "white noise", because it is always present in the environment both during the development of system while the measurements are executed and both during production periods. This would suggest to ignore the presence of other tenant workloads as its effect is constant in average. However, complete ignorance is not a good solution. In order to mitigate these anomalies, the test framework executes measurement multiple times with the same configuration and draws the final conclusion from aggregated results. In addition, all the components of the application and the framework tooling have defined resource requests \cite{KubernetesResourceManagement} in the Kubernetes configurations ensuring that each pod possesses the necessary resources to function correctly at all times.
 
 %%----------------------------------------------------------------------------
 %\subsection{Measuring the Baseline Values}
@@ -860,11 +860,11 @@ Looking at the results of the baseline measurements, one can notice several gene
 
 As anticipated, the fault profile named "\texttt{none}" -- that does not inject any anomalies into the system -- delivered flawless metrics. The high value of \texttt{rel\_MTBF} can be counter-intuitive, however in a bounded time interval with no errors this is the right result, according to the formula described in Section \ref{background-dep-metrics-mean-values} (after normalization).
 
-Applying the profiles "\texttt{stress-cpu}" and "\texttt{stress-mem} have only marginal effects on the metrics, that could a consequence of not enough injected simulated workload on the Pods. In this project, the task of fine-tuning of these chaos experiments remains open and is a good candidate for future work (see Section \ref{future-work}). However, for the sake of a thorough analysis, let us assume that the configuration of these chaos experiments lead to significant resource utilization anomalies (CPU and memory pressure). In Kubernetes, when the Pods on a given Node use up too much of the Node's resources, a couple of Pods get evicted from that Node to free up resources and are rescheduled on other Nodes, if possible \cite{KubernetesNodePressureEviction}. One might notice, that from the Pod's point of view, this prevention mechanism is similar to when the Pod simply gets deleted or killed due to an error. Of course, the user workload running on the Pod may experience performance issues before eviction, but in the end the application suffers from the same scenario: one of its component is stopped and restarted elsewhere in the cluster. Thus, if the system is prepared for sudden component fails and restarts, than it can also mitigate to some degree the effects of unexpected Node resource utilization growths.
+Applying the profiles "\texttt{stress-cpu}" and "\texttt{stress-mem} have only marginal effects on the metrics, that could be a consequence of not enough injected simulated workload on the Pods. In this project, the task of fine-tuning of these chaos experiments remains open and is a good candidate for future work (see Section \ref{future-work}). However, for the sake of a thorough analysis, let us assume that the configuration of these chaos experiments lead to significant resource utilization anomalies (CPU and memory pressure). In Kubernetes, when the Pods on a given Node use up too much of the Node's resources, a couple of Pods get evicted from that Node to free up resources and are rescheduled on other Nodes, if possible \cite{KubernetesNodePressureEviction}. One might notice, that from the Pod's point of view, this prevention mechanism is similar to when the Pod simply gets deleted or killed due to an error. Of course, the user workload running on the Pod may experience performance issues before eviction, but in the end the application suffers from the same scenario: one of its component is stopped and restarted elsewhere in the cluster. Thus, if the system is prepared for sudden component fails and restarts, than it can also mitigate to some degree the effects of unexpected Node resource utilization growths.
 
-Similarly the its two precedents, the fault profile named "\texttt{network-partition}" causes little falls in the metrics compared to the "\texttt{none}" profile. The root cause for this is probably the configuration of the chaos experiment. Its effects could be more severe, if the network partition occurred more frequently and affecting more Pods in the application namespace. This fine-tuning remains a possible next step for future work (see Section \ref{future-work}).
+Similarly to its two precedents, the fault profile named "\texttt{network-partition}" causes little falls in the metrics compared to the "\texttt{none}" profile. The root cause for this is probably the configuration of the chaos experiment. Its effects could be more severe, if the network partition occurred more frequently and affecting more Pods in the application namespace. This fine-tuning remains a possible next step for future work (see Section \ref{future-work}).
 
-The fault profile named "\texttt{io}" produced the worst \texttt{availability} metric, however the \texttt{finished\_jobs\_ratio} value is the same as for the "\texttt{none}" profile. The reason for the lowest \texttt{availability} may well be in the mechanism how the backend component periodically checks if the database connection is still alive. Each time the backend performs a health check, it attempts to persist a test object and then sends a request to the database to query the newly created test data (as described in Section \ref{impl-backend-healthcheck}). One can notice that this is a synchronous mechanism. If writing to the database (which is stored on the disk) takes a long time because of the injected I/O delay, than the query that tries to retrieve the data can fail with a timeout error. Yet, during task executions, the application does not make an attempt to immediately check the persisted results, the communication remains asynchronous and the test framework only queries the jobs at the end of the measurements, after the load generation and fault injection is done.
+The fault profile named "\texttt{io}" produced the worst \texttt{availability} metric, however the \texttt{finished\_jobs\_ratio} value is the same as for the "\texttt{none}" profile. The reason for the lowest \texttt{availability} may well be in the mechanism how the backend component periodically checks if the database connection is still alive. Each time the backend performs a health check, it attempts to persist a test object and then sends a request to the database to query the newly created test data (as described in Section \ref{impl-backend-healthcheck}). One can notice that this is a synchronous mechanism. If writing to the database (which is stored on the disk) takes a long time because of the injected I/O delay, than the query that tries to retrieve the data can fail with a timeout error. Yet, during task executions, the application does not make an attempt to immediately check the persisted results, the communication remains asynchronous and the test framework only queries the jobs at the end of the measurements, after the load generation and fault injection are done.
 
 The results of the fault profile "\texttt{network-delay}" show a similar characteristic as of the "\texttt{io}" -- significantly lower \texttt{availability} paired with little or no change in \texttt{finished\_jobs\_ratio} compared to the "\texttt{none}" profile. The reason for this is analogous as well. The steps of the health check implemented in the backend (see in Section \ref{impl-backend-healthcheck}) are using a synchronous communication model. For example, to test the connection between the backend and the worker components, a request is sent out from the backend and then it waits for a specific response. Due to the injected network delay, the health check can fail with a timeout error. However, as described above, during task executions, the communication follows an asynchronous pattern.
 
