[DOC] Enhancements fixes

--- a/docs/content/enhancements.tex
+++ b/docs/content/enhancements.tex
@@ -8,7 +8,7 @@ This chapter describes a few alternatives to improve the dependability of the sa
 \section{Introduction}
 %----------------------------------------------------------------------------
 
-With the application and the initial measurements being ready, the next task is to attempt to make the dependability of the application better. In the next sections, first, the possible methods and architectural layers are explored, where the enhancements are feasible and the design aspects of two concrete approaches -- Kafka and a custom logic called Heartbeats -- are described (see Section \ref{enhancements-design}). Later, the implementational details and the related build pipeline modifications of the preceding enhancement alternatives are discussed (see Section \ref{enhancements-impl}).
+With the application and the initial measurements being ready, the next task is to attempt to make the dependability of the application better. In the next sections, the possible methods and architectural layers are explored, where the enhancements are feasible and the design aspects of two concrete approaches -- Kafka and a custom logic called Heartbeats -- are described (see Section \ref{enhancements-design}). Later, the implementational details and the related build pipeline modifications of the preceding enhancement alternatives are discussed (see Section \ref{enhancements-impl}).
 
 %----------------------------------------------------------------------------
 \section{Design} \label{enhancements-design}
